--- a/code/ex1-linear regression/1.linear_regreesion_v1.ipynb
+++ b/code/ex1-linear regression/1.linear_regreesion_v1.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "import seaborn as sns\n",\\这是一个matplotlib的扩展
     "sns.set(context=\"notebook\", style=\"whitegrid\", palette=\"dark\")\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
